--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -20,6 +24,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "axios": "^1.3.4",
+    "formik": "^2.2.9",
+    "react-redux": "^8.0.5",
+    "react-redux-toolkit": "^0.0.1-alpha.2",
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.2.3",
+    "redux-thunk": "^2.4.2",
+    "web-vitals": "^2.1.4"
   }
 }
