--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "realta-frontend",
+  "name": "fe-hr",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,33 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
-    "@types/react-dom": "18.0.11",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.34",
+    "@types/react-dom": "18.0.11",
+    "@types/redux-logger": "^3.0.9",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
+    "cookies-next": "^2.1.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "formik": "^2.2.9",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4",
-    "axios": "^1.3.4",
-    "formik": "^2.2.9",
     "react-redux": "^8.0.5",
-    "react-redux-toolkit": "^0.0.1-alpha.2",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4"
+    "tailwindcss": "3.3.1",
+    "typescript": "5.0.4",
+    "web-vitals": "^3.3.1"
   }
 }
