--- a/package.json
+++ b/package.json
@@ -9,8 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
+    "@emotion/css": "^11.10.8",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
+    "@mui/x-data-grid": "^6.3.0",
+    "@mui/x-data-grid-generator": "^6.3.0",
+    "@next/font": "^13.3.4",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -19,24 +32,41 @@
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
     "@types/redux-logger": "^3.0.9",
+    "@types/uuid": "^9.0.1",
+    "@vonage/server-sdk": "^3.4.0",
+    "antd": "^5.4.6",
+    "antd-img-crop": "^4.12.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
     "cookies-next": "^2.1.1",
+    "currency.js": "^2.0.4",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.7",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "fetch-jsonp": "^1.2.3",
+    "formidable": "^2.1.1",
     "formik": "^2.2.9",
+    "isomorphic-unfetch": "^4.0.2",
+    "mime": "^3.0.0",
+    "moment": "^2.29.4",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-phone-number-input": "^3.2.20",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
+    "resolve-from": "^5.0.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
-    "web-vitals": "^3.3.1"
+    "uuid": "^9.0.0",
+    "web-vitals": "^3.3.1",
+    "yup": "^1.1.1"
   }
 }
