--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@types/react-dom": "18.0.11",
     "@types/redux-logger": "^3.0.9",
     "@types/uuid": "^9.0.1",
-    "@vonage/server-sdk": "^3.4.0",
     "antd": "^5.4.6",
     "antd-img-crop": "^4.12.2",
     "autoprefixer": "10.4.14",
@@ -54,6 +53,7 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-phone-number-input": "^3.2.20",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.2",
@@ -63,6 +63,7 @@
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
     "resolve-from": "^5.0.0",
+    "sweetalert2": "^11.7.3",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "uuid": "^9.0.0",
