--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "moment": "^2.29.4",
     "next": "13.3.0",
     "postcss": "8.4.21",
+    "primereact": "^9.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
