--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/redux-logger": "^3.0.9",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
+    "classnames": "^2.3.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
