--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "formik": "^2.2.9",
     "next": "13.3.0",
     "postcss": "8.4.21",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
