--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "formik": "^2.2.9",
     "next": "13.3.0",
     "postcss": "8.4.21",
+    "print": "^1.2.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
@@ -40,6 +41,7 @@
     "react-redux-toolkit": "^0.0.1-alpha.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-to": "^0.1.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
