--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
+    "jquery": "^3.7.0",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "print": "^1.2.0",
