--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
+    "cookies-next": "^2.1.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
@@ -30,7 +31,7 @@
     "postcss": "8.4.21",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
-    "primereact": "^9.3.1",
+    "primereact": "^9.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
