--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "primereact": "^9.3.1",
