--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "redux-thunk": "^2.4.2",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/redux-logger": "^3.0.9"
